--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,30 @@
-/target/
-/test-results/
-/.idea/
+# Java
+*.class
+
+# Log files
+*.log
+hs_err_pid*
+
+# Gradle
+.gradle
+build
+bin
+
+# IntelliJ
 *.iml
-/classes/
-/out/
+*.ipr
+*.iws
+.idea
+
+# Eclipse project
+.settings
+.project
+.classpath
+
+# Visual Studio Code
+.vscode
+
+# General MacOS
+.DS_Store
+.AppleDouble
+.LSOverride
